--- a/schedule.html
+++ b/schedule.html
@@ -811,13 +811,38 @@
 
             <!-- Program Schedule Content -->
             <div class="single-tab-content">
+              <!-- Day 0 - Arrivals -->
+              <div class="row mb-5">
+                <div class="col-12">
+                  <div class="day-schedule-header text-center mb-4">
+                    <h2 class="day-title">25th November 2025</h2>
+                    <h4 class="day-subtitle">Day 0 / ARRIVALS</h4>
+                    <p class="dress-code">
+                      <strong>Dress code: Casual</strong>
+                    </p>
+                  </div>
+
+                  <div class="schedule-timeline">
+                    <div
+                      class="schedule-item wow fadeInUp"
+                      data-wow-delay="100ms"
+                    >
+                      <div class="schedule-time">All day</div>
+                      <div class="schedule-content">
+                        <h5>Arrivals</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <!-- Day 1 -->
               <div class="row mb-5">
                 <div class="col-12">
                   <div class="day-schedule-header text-center mb-4">
                     <h2 class="day-title">26th November 2025</h2>
                     <h4 class="day-subtitle">
-                      Day 1 - REGISTRATION AND EXECUTIVE COMMITTEE MEETINGS
+                      Day 1 / REGISTRATION AND EXECUTIVE COMMITTEE MEETINGS
                     </h4>
                     <p class="dress-code">
                       <strong>Dress Code: Smart Casual</strong>
@@ -832,7 +857,10 @@
                       <div class="schedule-time">09h00 – 16h00</div>
                       <div class="schedule-content">
                         <h5>Registration</h5>
-                        <p><em>(Required)</em></p>
+                        <p>
+                          Golf and Tennis (Only for those interested -
+                          Registration Required)
+                        </p>
                       </div>
                     </div>
 
@@ -842,29 +870,13 @@
                     >
                       <div class="schedule-time">10h30 – 13h30</div>
                       <div class="schedule-content">
-                        <h5>Golf and Tennis</h5>
-                        <p>
-                          <em
-                            >(Only for those interested - Registration
-                            Required)</em
-                          >
-                        </p>
-                      </div>
-                    </div>
-
-                    <div
-                      class="schedule-item wow fadeInUp"
-                      data-wow-delay="300ms"
-                    >
-                      <div class="schedule-time">10h30 – 13h30</div>
-                      <div class="schedule-content">
                         <h5>AELP Forum</h5>
                       </div>
                     </div>
 
                     <div
                       class="schedule-item wow fadeInUp"
-                      data-wow-delay="400ms"
+                      data-wow-delay="300ms"
                     >
                       <div class="schedule-time">15h00 – 16h00</div>
                       <div class="schedule-content">
@@ -874,7 +886,7 @@
 
                     <div
                       class="schedule-item wow fadeInUp"
-                      data-wow-delay="500ms"
+                      data-wow-delay="400ms"
                     >
                       <div class="schedule-time">18h00 – 20h00</div>
                       <div class="schedule-content">
@@ -933,10 +945,13 @@
                     >
                       <div class="schedule-time">10h30 – 11h30</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 1</h5>
+                        <h5>
+                          Panel Session 1: Building a Resilient African Capital
+                          Market
+                        </h5>
                         <p>
-                          Building a Resilient African Capital Market: Adapting
-                          to Geopolitical Risks and current economic wars.
+                          Adapting to Geopolitical Risks and current economic
+                          wars.
                         </p>
                       </div>
                     </div>
@@ -947,10 +962,10 @@
                     >
                       <div class="schedule-time">11h30 – 12h30</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 2</h5>
+                        <h5>Panel Session 2: Financing the Future</h5>
                         <p>
-                          SME Financing: Capital Market Strategies for
-                          Sustainable Growth and Innovation
+                          Capital Market Strategies for Sustainable Growth and
+                          Innovation
                         </p>
                       </div>
                     </div>
@@ -971,11 +986,11 @@
                     >
                       <div class="schedule-time">13h30 – 14h30</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 3</h5>
-                        <p>
-                          Digital Transformation in Capital Markets:
-                          Opportunities, Risks, and the path forward.
-                        </p>
+                        <h5>
+                          Panel Session 3: Digital Transformation in Capital
+                          Markets
+                        </h5>
+                        <p>Opportunities, Risks, and the path forward.</p>
                       </div>
                     </div>
 
@@ -985,11 +1000,11 @@
                     >
                       <div class="schedule-time">14h30 – 15h30</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 4</h5>
+                        <h5>Panel Session 4: The untapped capital</h5>
                         <p>
-                          The untapped capital: Looking Eastward; Islamic and
-                          Sustainable finance, an opportunity for African
-                          businesses and governments to grab.
+                          Looking Eastward; Islamic and Sustainable finance, an
+                          opportunity for African businesses and governments to
+                          grab.
                         </p>
                       </div>
                     </div>
@@ -1043,7 +1058,8 @@
                     >
                       <div class="schedule-time">09h00 – 09h20</div>
                       <div class="schedule-content">
-                        <h5>Welcome note from the sponsor(s)</h5>
+                        <h5>Opening Remarks: Guest of Honour</h5>
+                        <p>Welcome note from the sponsor(s)</p>
                       </div>
                     </div>
 
@@ -1067,13 +1083,13 @@
                     >
                       <div class="schedule-time">09h55 – 10h35</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 6</h5>
+                        <h5>Panel Session 6: The power of mindset change</h5>
                         <p>
-                          The power of mindset change: Can African Capital
-                          markets create real wealth for Africans and foster
-                          real financial inclusion and ownership by its own
-                          citizens? A real conversation with policy makers,
-                          asset owners, entrepreneurs and professionals.
+                          Can African Capital markets create real wealth for
+                          Africans and foster real financial inclusion and
+                          ownership by its own citizens? A real conversation
+                          with policy makers, asset owners, entrepreneurs and
+                          professionals.
                         </p>
                       </div>
                     </div>
@@ -1084,7 +1100,7 @@
                     >
                       <div class="schedule-time">10h35 – 11h15</div>
                       <div class="schedule-content">
-                        <h5>The role of regulation</h5>
+                        <h5>Panel Session 7: The role of regulation</h5>
                         <p>
                           Balancing stability, Innovation, and market access in
                           a changing world.
@@ -1098,10 +1114,13 @@
                     >
                       <div class="schedule-time">11h15 – 11h55</div>
                       <div class="schedule-content">
-                        <h5>Panel Session 7</h5>
+                        <h5>
+                          Panel Session 8: Global cooperation for stronger
+                          markets
+                        </h5>
                         <p>
-                          Global cooperation for stronger markets: Aligning
-                          policies and fostering Cross – Border Investment.
+                          Aligning policies and fostering Cross – Border
+                          Investment.
                         </p>
                       </div>
                     </div>
@@ -1122,7 +1141,7 @@
                     >
                       <div class="schedule-time">12h15 – 13h00</div>
                       <div class="schedule-content">
-                        <h5>Panel Discussion 8</h5>
+                        <h5>Panel Discussion 9</h5>
                         <p>
                           The potential for commodities and derivatives markets
                           for economic growth and food security for Africa.
@@ -1146,11 +1165,8 @@
                     >
                       <div class="schedule-time">14h40 – 14h50</div>
                       <div class="schedule-content">
-                        <h5>Closing Session</h5>
-                        <p>
-                          Wrap up: Business as usual or homework for
-                          implementation?
-                        </p>
+                        <h5>Closing Session: Wrap up</h5>
+                        <p>Business as usual or homework for implementation?</p>
                       </div>
                     </div>
 
@@ -1170,7 +1186,7 @@
                     >
                       <div class="schedule-time">18h00 – 22h00</div>
                       <div class="schedule-content">
-                        <h5>FAREWELL DINNER</h5>
+                        <h5>FAREWELL DINER</h5>
                         <p><strong>Dress: OLDIES</strong></p>
                       </div>
                     </div>
