--- a/speakers.html
+++ b/speakers.html
@@ -2511,6 +2511,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Patience Mutesi -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="banking">
+                <div class="speaker-image">
+                  <img src="img/speakers/patience-mutesi.jpg" alt="Patience Mutesi" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Patience Mutesi</h3>
+                  <h4>CEO, BPR Bank Rwanda</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalPatienceMutesi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -6453,6 +6479,60 @@
                     </p>
                     <p>
                       He is currently the consulting CEO of the Burundi securities Exchange and Principal Consultant at Blockweb Africa, a capital market consulting firm based in Nairobi.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Patience Mutesi -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalPatienceMutesi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/patience-mutesi.jpg"
+                    alt="Patience Mutesi"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Patience Mutesi</h3>
+                  <h4>CEO, BPR Bank Rwanda</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Patience has an MBA in Finance from Maastricht School of Management, Netherlands and a BSc in Quantitative Economics, Makerere University, Uganda. She joined BPR Bank from TradeMark East Africa (TMEA) where she was serving as the Country Director. She was responsible for maintaining strategic relationships with government, private sector, civil society, and donor community, while overseeing strategic projects implementation in trade facilitation in Rwanda.
+                    </p>
+                    <p>
+                      She has diversified background in the financial sector including credit management, product development and fundraising, extensive experience in deal origination, negotiation, structuring, and execution as well as credible expertise in strategic risk management having previously served as Corporate Bank Head, Ecobank Rwanda and Cluster Head for EAC as well as Deputy Head of Corporate Banking and Senior Relationship Manager, BCR.
                     </p>
                   </div>
                 </div>
