--- a/sponsors.html
+++ b/sponsors.html
@@ -740,6 +740,13 @@
                 </div>
                 <div class="sponsor-logo-container">
                   <img
+                    src="img/sponsors/BPR-Logo-2.png"
+                    alt="BPR Bank Rwanda"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
                     src="img/sponsors/Bank of Kigali.png"
                     alt="Bank of Kigali"
                     class="sponsor-logo"
