--- a/speakers.html
+++ b/speakers.html
@@ -2524,7 +2524,7 @@
                 </div>
                 <div class="speaker-info">
                   <h3>Patience Mutesi</h3>
-                  <h4>CEO, BPR Bank Rwanda</h4>
+                  <h4>Managing Director, BPR Bank Rwanda</h4>
                   <p></p>
                   <a
                     href="#"
@@ -6526,7 +6526,7 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Patience Mutesi</h3>
-                  <h4>CEO, BPR Bank Rwanda</h4>
+                  <h4>Managing Director, BPR Bank Rwanda</h4>
                   <div class="speaker-modal-bio">
                     <p>
                       Patience has an MBA in Finance from Maastricht School of Management, Netherlands and a BSc in Quantitative Economics, Makerere University, Uganda. She joined BPR Bank from TradeMark East Africa (TMEA) where she was serving as the Country Director. She was responsible for maintaining strategic relationships with government, private sector, civil society, and donor community, while overseeing strategic projects implementation in trade facilitation in Rwanda.
