--- a/speakers.html
+++ b/speakers.html
@@ -2537,6 +2537,58 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Dr. Monique Nsanzabaganwa -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="government">
+                <div class="speaker-image">
+                  <img src="img/speakers/Monique.jpeg" alt="Dr. Monique Nsanzabaganwa" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Dr. Monique Nsanzabaganwa</h3>
+                  <h4>Former Deputy Chairperson, African Union Commission</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMoniqueNsanzabaganwa"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Dr. Donald Kaberuka -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="finance">
+                <div class="speaker-image">
+                  <img src="img/speakers/Donald.jpeg" alt="Dr. Donald Kaberuka" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Dr. Donald Kaberuka</h3>
+                  <h4>Former President, African Development Bank</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalDonaldKaberuka"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -6533,6 +6585,120 @@
                     </p>
                     <p>
                       She has diversified background in the financial sector including credit management, product development and fundraising, extensive experience in deal origination, negotiation, structuring, and execution as well as credible expertise in strategic risk management having previously served as Corporate Bank Head, Ecobank Rwanda and Cluster Head for EAC as well as Deputy Head of Corporate Banking and Senior Relationship Manager, BCR.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Dr. Monique Nsanzabaganwa -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMoniqueNsanzabaganwa"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Monique.jpeg"
+                    alt="Dr. Monique Nsanzabaganwa"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Dr. Monique Nsanzabaganwa</h3>
+                  <h4>Former Deputy Chairperson, African Union Commission</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Dr. Monique Nsanzabaganwa is a Rwandan high profiled leader, seasoned economist and financial expert with 25+ years of experience in international banking, trade, finance, and economic development. She is immediate former Deputy Chairperson of the African Union Commission, a position she held after 11 years at the Central Bank of Rwanda as Deputy Governor.
+                    </p>
+                    <p>
+                      She previously served as Minister of Trade and Industry and Minister of State in charge of Economic Planning. Dr. Monique has a track record of leadership of innovation in promoting intra-African trade and investments, in promoting collaboration among Pan-African financial institutions such as the Alliance of African Multilateral Financial Institutions – The Africa Club, and in establishing SMEs, women and youth as key actors in value and supply chains and the digital economy.
+                    </p>
+                    <p>
+                      She is serving on a number of Advisory Boards, including the G20 Africa Expert Panel.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Dr. Donald Kaberuka -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalDonaldKaberuka"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Donald.jpeg"
+                    alt="Dr. Donald Kaberuka"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Dr. Donald Kaberuka</h3>
+                  <h4>Former President, African Development Bank</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Dr. Donald Kaberuka served as the 7th President of the African Development Bank from 2005 to 2015, leading the institution through a transformative decade of growth and innovation in African development finance.
+                    </p>
+                    <p>
+                      He currently serves as Special Envoy of the African Union on Financing and holds the position of Emeritus Chair of the Global Fund. Prior to his leadership at the African Development Bank, Dr. Kaberuka served as Minister of Finance of Rwanda, where he played a crucial role in the country's economic recovery and development.
+                    </p>
+                    <p>
+                      His extensive experience in international finance, economic policy, and African development has made him one of the continent's most respected voices on economic matters and development finance.
                     </p>
                   </div>
                 </div>
