travel page edited

--- a/travel.html
+++ b/travel.html
@@ -549,6 +549,189 @@
           </div>
         </div>
 
+        <!-- Cab Services Section -->
+        <div
+          class="row align-items-center info-section wow fadeInUp"
+          data-wow-delay="300ms"
+        >
+          <div class="col-12 mb-4">
+            <h6 class="section-subtitle">TRANSPORTATION</h6>
+            <h3>ORDERING A CAB IN KIGALI</h3>
+            <p style="font-size: 16px; line-height: 1.8; margin-bottom: 30px">
+              Getting around Kigali is easy and convenient with ride-hailing
+              apps. The two most popular services are Move and Yego Cabs,
+              offering safe, reliable, and affordable transportation throughout
+              the city.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-6 mb-4">
+            <div
+              class="info-box"
+              style="
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white;
+              "
+            >
+              <i class="fas fa-car travel-tip-icon" style="color: white"></i>
+              <h5 class="mb-3" style="color: white">MOVE APP</h5>
+              <p style="color: white">
+                Move is Rwanda's leading ride-hailing service offering cars and
+                motorcycles.
+              </p>
+              <p style="color: white; font-weight: 600">
+                <i class="fas fa-phone-alt mr-2"></i> Call:
+                <strong>1010</strong>
+              </p>
+              <div class="mt-3">
+                <h6 style="color: white; font-weight: 600">How to use:</h6>
+                <ol style="color: white; padding-left: 20px; line-height: 1.8">
+                  <li>
+                    Download the Move app from Google Play Store or Apple App
+                    Store
+                  </li>
+                  <li>Create an account using your phone number</li>
+                  <li>Add payment method (cash or mobile money)</li>
+                  <li>Enter your destination and request a ride</li>
+                  <li>Track your driver in real-time and enjoy your ride</li>
+                </ol>
+              </div>
+              <div class="mt-4">
+                <a
+                  href="https://play.google.com/store/apps/details?id=rw.vw.communitycarsharing"
+                  target="_blank"
+                  class="btn confer-btn-white mr-2 mb-2"
+                  style="background: white; color: #667eea"
+                >
+                  <i class="fab fa-google-play"></i> Google Play
+                </a>
+                <a
+                  href="https://itunes.apple.com/us/app/move-by-volkswagen/id1400165112?ls=1&mt=8"
+                  target="_blank"
+                  class="btn confer-btn-white mb-2"
+                  style="background: white; color: #667eea"
+                >
+                  <i class="fab fa-apple"></i> App Store
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 mb-4">
+            <div
+              class="info-box"
+              style="
+                background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+                color: white;
+              "
+            >
+              <i class="fas fa-car travel-tip-icon" style="color: white"></i>
+              <h5 class="mb-3" style="color: white">YEGO CABS</h5>
+              <p style="color: white">
+                Yego offers reliable cabs for fast and convenient
+                transportation.
+              </p>
+              <p style="color: white; font-weight: 600">
+                <i class="fas fa-phone-alt mr-2"></i> Call:
+                <strong>9191</strong>
+              </p>
+              <div class="mt-3">
+                <h6 style="color: white; font-weight: 600">How to use:</h6>
+                <ol style="color: white; padding-left: 20px; line-height: 1.8">
+                  <li>
+                    Download the Yego app from Google Play Store or Apple App
+                    Store
+                  </li>
+                  <li>Sign up with your phone number and verify</li>
+                  <li>Set up payment (mobile money or card)</li>
+                  <li>Set your pickup location and destination</li>
+                  <li>Confirm booking and meet your rider</li>
+                </ol>
+              </div>
+              <div class="mt-4">
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.yego.passenger&hl=en"
+                  target="_blank"
+                  class="btn confer-btn-white mr-2 mb-2"
+                  style="background: white; color: #f5576c"
+                >
+                  <i class="fab fa-google-play"></i> Google Play
+                </a>
+                <a
+                  href="https://apps.apple.com/ca/app/yego-rwanda-ride-hailing/id1489275831"
+                  target="_blank"
+                  class="btn confer-btn-white mb-2"
+                  style="background: white; color: #f5576c"
+                >
+                  <i class="fab fa-apple"></i> App Store
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 mt-3">
+            <div
+              class="alert"
+              role="alert"
+              style="
+                background-color: #fff3cd;
+                border-left: 4px solid #ffc107;
+                border-radius: 10px;
+                padding: 20px;
+              "
+            >
+              <h5>
+                <i class="fas fa-lightbulb mr-2" style="color: #ffc107"></i>
+                Transportation Tips
+              </h5>
+              <ul style="list-style: none; padding-left: 0; margin-bottom: 0">
+                <li style="margin-bottom: 10px">
+                  <i
+                    class="fas fa-check-circle mr-2"
+                    style="color: #ffc107"
+                  ></i>
+                  <strong>Payment:</strong> Both apps accept cash and mobile
+                  money (MTN Mobile Money, Airtel Money)
+                </li>
+                <li style="margin-bottom: 10px">
+                  <i
+                    class="fas fa-check-circle mr-2"
+                    style="color: #ffc107"
+                  ></i>
+                  <strong>Safety:</strong> All drivers are vetted and licensed
+                  by the Rwanda Utilities Regulatory Authority
+                </li>
+                <li style="margin-bottom: 10px">
+                  <i
+                    class="fas fa-check-circle mr-2"
+                    style="color: #ffc107"
+                  ></i>
+                  <strong>Helmets:</strong> Yego riders always provide helmets
+                  for passengers (mandatory by law)
+                </li>
+                <li style="margin-bottom: 10px">
+                  <i
+                    class="fas fa-check-circle mr-2"
+                    style="color: #ffc107"
+                  ></i>
+                  <strong>Language:</strong> Most drivers speak English, French,
+                  and Kinyarwanda
+                </li>
+                <li>
+                  <i
+                    class="fas fa-check-circle mr-2"
+                    style="color: #ffc107"
+                  ></i>
+                  <strong>Airport Transfers:</strong> Both services operate from
+                  Kigali International Airport 24/7
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="section-divider"></div>
+
         <!-- Flight to Rwanda Section -->
         <div
           class="row align-items-center info-section wow fadeInUp"
