--- a/speakers.html
+++ b/speakers.html
@@ -986,7 +986,7 @@
               </div>
               <div class="speaker-info">
                 <h3>Dr. Donald Kaberuka</h3>
-                <h4>Former President, African Development Bank</h4>
+                <h4>Chairman and Managing Partner, SouthBridge</h4>
                 <p></p>
                 <a
                   href="#"
@@ -6608,16 +6608,19 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Dr. Donald Kaberuka</h3>
-                  <h4>Former President, African Development Bank</h4>
+                  <h4>Chairman and Managing Partner, SouthBridge</h4>
                   <div class="speaker-modal-bio">
                     <p>
-                      Dr. Donald Kaberuka served as the 7th President of the African Development Bank from 2005 to 2015, leading the institution through a transformative decade of growth and innovation in African development finance.
+                      A Rwandan economist and former Finance Minister, Dr. Kaberuka is the 7th President of the African Development Bank (2005-2015). He is credited for expanding the reach and impact of AfDB, Africa's premier financial institution during his two terms as President.
                     </p>
                     <p>
-                      He currently serves as Special Envoy of the African Union on Financing and holds the position of Emeritus Chair of the Global Fund. Prior to his leadership at the African Development Bank, Dr. Kaberuka served as Minister of Finance of Rwanda, where he played a crucial role in the country's economic recovery and development.
+                      Dr. Kaberuka is currently the African Union High Representative for Financing, the Peace Fund and COVID19 response. He served as Board Chair of The Global Fund to Fight HIV/AIDS, TB and Malaria (2019 – 2023). Prior to his leadership at the African Development Bank, he served as Minister of Finance and Economic Planning, Rwanda (1997 – 2005).
                     </p>
                     <p>
-                      His extensive experience in international finance, economic policy, and African development has made him one of the continent's most respected voices on economic matters and development finance.
+                      He is a member of the Board of Trustees of several organisations and think tanks including the Rockefeller Foundation, Center for Global Development, the Mo Ibrahim Foundation, and The Brookings Institution. He serves on the International Advisory Council of Standard Chartered Bank and Co-Chair of Council on State Fragility. He was also nominated in 2017 to Chair the panel on the third External Evaluation of the International Monetary Fund.
+                    </p>
+                    <p>
+                      Since retiring from the African Development Bank, he is Chairman and Managing Partner of SouthBridge, a financial and investment advisory firm which he co-founded.
                     </p>
                   </div>
                 </div>
